Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-67981

Printing a line series chart to a pdf file causes point labels to be massive size

    XMLWordPrintable

Details

    • 2b908b6324a78842b7dbd6b50da03baecd70b3fa (qt/qtcharts/5.12)

    Description

      When printing a line series chart to a pdf file, the point label sizes are massive.

      Steps to reproduce:

      • Run attached sample
      • Open the created pdf file
      • EXPECTED: pdf file contents are somewhat same looking as the shown window
      • ACTUAL: pdf file point labels are massively oversized

      Attachments

        1. qtbug67981_charts_diag.diff
          3 kB
        2. qtbug67981_diag.diff
          9 kB
        3. qtbug67981_log.txt
          87 kB
        4. qtbug67981.jpg
          qtbug67981.jpg
          109 kB
        5. qtbug67981.zip
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laknoll Lars Knoll
            jussi_witick Jussi Witick
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes