Fix printing of labels for line series charts

The labels ended up getting way to big on the printer, because
they didn't respect the transform set by the PDF engine when
setting the font size.

Fix the same problem in AreaChartItem::paint().

Change-Id: I18fd6ebb4c4031c7b2df423cf842b39ff9891135
Fixes: QTBUG-67981
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>